<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DuckerZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="homeTitle">What is RubberDuck debugging?</string>
    <string name="startButton">Play</string>
    <string name="patkaButt">Meet the Duck!</string>
    <string name="title_activity_select">SelectActivity</string>
    <string name="selector">Select Level</string>
    <string name="back_str">Back</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="lvl4">Level 4</string>
    <string name="lvl5">Level 5</string>
    <string name="lvl42">Level 42</string>
    <string name="cont_str">Continue</string>
    <string name="description">ImageView</string>
    <string name="task_str">This is the code.Find errors:</string>
    <string name="mtd_str">Meet the duck</string>
    <string name="duckieTitle">Im duckie</string>
    <string name="submit_str">Submit</string>
    <string name="title_activity_meet_the_duck">MeetTheDuckActivity</string>
    <string name="title_activity_level_select">LevelSelect</string>
    <string name="title_activity_level2">Level2Activity</string>
    <string name="title_activity_level3">Level3Activity</string>
    <string name="title_activity_level4">Level4Activity</string>
    <string name="title_activity_continiue">ContiniueActivity</string>

</resources>
