<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#5abb93"
    tools:context="com.example.duckerz.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play_btn"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:background="@layout/buttonstyle"
            android:text="@string/startButton"
            android:textColor="#5abb93"
            android:textSize="30sp" />

        <Button
            android:id="@+id/cont_btn"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="38dp"
            android:background="@layout/buttonstyle"
            android:text="@string/cont_str"
            android:textColor="#5abb93"
            android:textSize="30sp" />

        <Button
            android:id="@+id/select_btn"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            android:background="@layout/buttonstyle"
            android:text="@string/selector"
            android:textColor="#5abb93"
            android:textSize="30sp" />

        <Button
            android:id="@+id/mtd_btn"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@layout/buttonstyle"
            android:text="@string/mtd_str"
            android:textColor="#5abb93"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>