<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#5abb93"
    tools:context="com.yellow_patka.thepatka.LevelSelect" 
    android:orientation="vertical">

   <LinearLayout
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_margin="@dimen/menu_margin">

        <Button
            android:id="@+id/backBtn" 
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@layout/buttonstyle"
            android:text="@string/back_str"
            android:textColor="#5abb93"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/Level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none" >
     
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical">
	    
	   <Button
	        android:id="@+id/lvl1_btn"
	        android:layout_width="270dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="28dp"
	        android:background="@layout/buttonstyle"
	        android:text="@string/lvl1"
	        android:textColor="#5abb93"
	        android:textSize="30sp"
 />
	
	    <Button
	        android:id="@+id/lvl2_btn"
	        android:layout_width="270dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="16dp"
	        android:background="@layout/buttonstyle"
	        android:text="@string/lvl2"
	        android:textColor="#5abb93"
	        android:textSize="30sp" />
	
	    <Button
	        android:id="@+id/lvl3_btn"
	        android:layout_width="270dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="16dp"
	        android:background="@layout/buttonstyle"
	        android:text="@string/lvl3"
	        android:textColor="#5abb93"
	        android:textSize="30sp" />
	
	    <Button
	        android:id="@+id/lvl4_btn"
	        android:layout_width="270dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="16dp"
	        android:background="@layout/buttonstyle"
	        android:text="@string/lvl4"
	        android:textColor="#5abb93"
	        android:textSize="30sp" />
	    
	    </LinearLayout>
    </ScrollView>

</LinearLayout>